--- a/practicas/DIWEB/Tema6/practica12/principal.html
+++ b/practicas/DIWEB/Tema6/practica12/principal.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Merienda+One" rel="stylesheet">
 
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/principal.css">
     <link rel="stylesheet" href="css/font-awesome.css">
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -31,7 +31,7 @@
     <nav>
         <ul>
             <li>
-                <a href="#">Inicio</a>
+                <a href="principal.html">Inicio</a>
             </li>
             <li>
                 <a href="#">Contacto</a>
@@ -59,7 +59,9 @@
                     <option value="casasRurales">Casas rurales</option>
                 </select>
 
-                <a href="#" class="btnConsultar">Consultar</a>
+                <div id="botonHeader">
+                    <a href="#" class="btnConsultar">Consultar</a>
+                </div>
             </div>
             <div id="imgReserva">
             </div>
@@ -71,102 +73,114 @@
 
                 <div class="columnaMedio">
                     <h3>Titulo</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+                    <p class="parrafo1">Lorem ipsum dolor sit amet</p>
+                    <p class="parrafo2">
+                        consectetur, adipisicing elit.
+                    </p>
                 </div>
 
                 <div class="columnaDerecha">
                     <p>Desde</p>
-                    <p>
+                    <p class="precio">
                         <span>50€</span>/noche
                     </p>
-                    <a href="#" class="btnConsultar">Ver alojamiento</a>
+                    <a href="casa.html" class="btnConsultar">Ver</a>
                 </div>
-
             </article>
             <article class="casaRural">
                 <img src="imagenes/fondo.jpg" alt="">
 
                 <div class="columnaMedio">
                     <h3>Titulo</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+                    <p class="parrafo1">Lorem ipsum dolor sit amet</p>
+                    <p class="parrafo2">
+                        consectetur, adipisicing elit.
+                    </p>
                 </div>
 
                 <div class="columnaDerecha">
                     <p>Desde</p>
-                    <p>
+                    <p class="precio">
                         <span>50€</span>/noche
                     </p>
-                    <a href="#" class="btnConsultar">Ver alojamiento</a>
+                    <a href="casa.html" class="btnConsultar">Ver</a>
                 </div>
-
             </article>
             <article class="casaRural">
                 <img src="imagenes/fondo.jpg" alt="">
 
                 <div class="columnaMedio">
                     <h3>Titulo</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+                    <p class="parrafo1">Lorem ipsum dolor sit amet</p>
+                    <p class="parrafo2">
+                        consectetur, adipisicing elit.
+                    </p>
                 </div>
 
                 <div class="columnaDerecha">
                     <p>Desde</p>
-                    <p>
+                    <p class="precio">
                         <span>50€</span>/noche
                     </p>
-                    <a href="#" class="btnConsultar">Ver alojamiento</a>
+                    <a href="casa.html" class="btnConsultar">Ver</a>
                 </div>
-
             </article>
             <article class="casaRural">
                 <img src="imagenes/fondo.jpg" alt="">
 
                 <div class="columnaMedio">
                     <h3>Titulo</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+                    <p class="parrafo1">Lorem ipsum dolor sit amet</p>
+                    <p class="parrafo2">
+                        consectetur, adipisicing elit.
+                    </p>
                 </div>
 
                 <div class="columnaDerecha">
                     <p>Desde</p>
-                    <p>
+                    <p class="precio">
                         <span>50€</span>/noche
                     </p>
-                    <a href="#" class="btnConsultar">Ver alojamiento</a>
+                    <a href="casa.html" class="btnConsultar">Ver</a>
                 </div>
-
             </article>
             <article class="casaRural">
                 <img src="imagenes/fondo.jpg" alt="">
 
                 <div class="columnaMedio">
                     <h3>Titulo</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+                    <p class="parrafo1">Lorem ipsum dolor sit amet</p>
+                    <p class="parrafo2">
+                        consectetur, adipisicing elit.
+                    </p>
                 </div>
 
                 <div class="columnaDerecha">
                     <p>Desde</p>
-                    <p>
+                    <p class="precio">
                         <span>50€</span>/noche
                     </p>
-                    <a href="#" class="btnConsultar">Ver alojamiento</a>
+                    <a href="casa.html" class="btnConsultar">Ver</a>
                 </div>
-
             </article>
             <article class="casaRural">
                 <img src="imagenes/fondo.jpg" alt="">
 
                 <div class="columnaMedio">
                     <h3>Titulo</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+                    <p class="parrafo1">Lorem ipsum dolor sit amet</p>
+                    <p class="parrafo2">
+                        consectetur, adipisicing elit.
+                    </p>
                 </div>
 
                 <div class="columnaDerecha">
                     <p>Desde</p>
-                    <p>
+                    <p class="precio">
                         <span>50€</span>/noche
                     </p>
-                    <a href="#" class="btnConsultar">Ver alojamiento</a>
+                    <a href="casa.html" class="btnConsultar">Ver</a>
                 </div>
-
             </article>
         </section>
     </main>
