--- a/practicas/DIWEB/Tema6/practica12/casa.html
+++ b/practicas/DIWEB/Tema6/practica12/casa.html
@@ -107,6 +107,43 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.82147472621!2d-4.547027284403056!3d37.98129540802284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6cfb5e86569f8d%3A0xd6791bc429e84098!2sFuente+Agria!5e0!3m2!1ses!2ses!4v1516105741950"></iframe>
 
             </article>
+            <article class="seccionesReservas">
+                <h2 class="tituloArticulos">Reservar villa</h2>
+                <form action="">
+                    <p>
+                        <label>Nombre</label>
+                        <input type="text" required>
+                    </p>
+                    <p>
+                        <label>Apellidos</label>
+                        <input type="text" required>
+                    </p>
+                    <p>
+                        <label>Correo</label>
+                        <input type="email" required>
+                    </p>
+                    <p>
+                        <label>Teléfono</label>
+                        <input type="text" required>
+                    </p>
+                    <p>
+                        <label>Fecha Entrada</label>
+                        <input type="date" required>
+                    </p>
+                    <p>
+                        <label>Fecha Salida</label>
+                        <input type="date" required>
+                    </p>
+                    <p>
+                        <label>Número de Personas</label>
+                        <input type="text" required>
+                    </p>
+                    <div id="botonHeader">
+                        <a href="#" class="btnConsultar">Reservar</a>
+                    </div>
+                </form>
+
+            </article>
             <article class="opiniones">
 
                 <h2 class="tituloArticulos">Opiniones de los clientes</h2>
@@ -135,9 +172,6 @@
             </article>
         </section>
 
-        <div id="botonHeader">
-            <a href="reserva.html" class="btnConsultar">Reservar</a>
-        </div>
     </main>
     <footer>
         <p>Casas Rurales 2018</p>
