--- a/practicas/DWEC/Tema 4. Programación con arrays, funciones y objetos/Mastermind/juego.html
+++ b/practicas/DWEC/Tema 4. Programación con arrays, funciones y objetos/Mastermind/juego.html
@@ -25,7 +25,7 @@
         </div>
 
         <div id="pantallaFin">
-            <h2>HAS GANADO!</h2>
+            <h2 id="ganado">HAS GANADO!</h2>
             <a href="" id="reiniciar">Reiniciar</a>
             <a href="" id="salir">SALIR</a>
         </div>
