--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Miguel Ángel Gavilán Merino">
-    <title>Miguel Ángel Gavilán Merino - Portfolio</title>
+    <title>Portfolio de Miguel Ángel Gavilán Merino</title>
 </head>
 <body>
     Portfolio de Miguel Ángel Gavilán Merino. Web en construcción.
