--- a/practicas/DWEC/Tema 7. JQuery/Mastermind-JQuery/index.html
+++ b/practicas/DWEC/Tema 7. JQuery/Mastermind-JQuery/index.html
@@ -8,8 +8,7 @@
     <title>MasterMind</title>
 
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-        crossorigin="anonymous"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/iniciarJquery.js"></script>
 </head>
 
