--- a/practicas/DWEC/Tema 7. JQuery/Mastermind-JQuery/juego.html
+++ b/practicas/DWEC/Tema 7. JQuery/Mastermind-JQuery/juego.html
@@ -10,8 +10,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-        crossorigin="anonymous"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/mastermind.js"></script>
     <script src="js/jugarJquery.js"></script>
 </head>
