--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="header">
         <h2>Hola<span class="signo">;</span>
         </h2>
-        <h3>Soy Miguel Ángel Gavilán Merino<span class="signo punto">.</span> Desarrollador web<span class="signo punto">.</span>
+        <h3>Soy Miguel Ángel Gavilán Merino<span class="signo punto">.</span> Web Developer<span class="signo punto">.</span>
         </h3>
     </div>
 
