--- a/practicas/DWEC/Tema 7. JQuery/Mastermind-JQuery/index.html
+++ b/practicas/DWEC/Tema 7. JQuery/Mastermind-JQuery/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-ui-1.12.1/jquery-ui.js"></script>
     <script src="js/iniciarJquery.js"></script>
 </head>
 
