--- a/practicas/DWEC/Tema 7. JQuery/Mastermind-JQuery/juego.html
+++ b/practicas/DWEC/Tema 7. JQuery/Mastermind-JQuery/juego.html
@@ -8,9 +8,12 @@
     <meta name="author" content="Miguel Ángel Gavilán Merino">
     <title>Miguel Ángel Gavilán Merino</title>
 
+    <link rel="stylesheet" href="js/jquery-ui-1.12.1/jquery-ui.css">
     <link rel="stylesheet" href="css/style.css">
 
     <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-ui-1.12.1/jquery-ui.js"></script>
+
     <script src="js/mastermind.js"></script>
     <script src="js/jugarJquery.js"></script>
 </head>
@@ -26,9 +29,7 @@
         </div>
 
         <div id="pantallaFin">
-            <h2 id="ganado">HAS GANADO!</h2>
-            <a href="" id="reiniciar">Reiniciar</a>
-            <a href="" id="salir">SALIR</a>
+            <h2 id="ganado1">HAS GANADO!</h2>
         </div>
 
         <div id="derecha">
