--- a/js.html
+++ b/js.html
@@ -64,6 +64,21 @@
                         <a href="https://github.com/Miangame/miangame.github.io/tree/master/practicas/DWEC/Tema%204.%20Programaci%C3%B3n%20con%20arrays%2C%20funciones%20y%20objetos/LindoGatito"
                             target="_blank">Código</a>
                     </li>
+                    <li>
+                        <a href="https://miangame.github.io/practicas/DWEC/Tema 4. Programación con arrays, funciones y objetos/Mastermind/" class="barra"
+                            target="_blank">Mastermind JS</a>
+                        <a href="https://github.com/Miangame/miangame.github.io/tree/master/practicas/DWEC/Tema%204.%20Programaci%C3%B3n%20con%20arrays%2C%20funciones%20y%20objetos/Mastermind"
+                            target="_blank">Código</a>
+                    </li>
+                    <li>
+                        <a href="https://miangame.github.io/practicas/DWEC/Tema 7. JQuery/JQueryUI/" class="barra" target="_blank">JQuery UI</a>
+                        <a href="https://github.com/Miangame/miangame.github.io/tree/master/practicas/DWEC/Tema%207.%20JQuery/JQueryUI" target="_blank">Código</a>
+                    </li>
+                    <li>
+                        <a href="https://miangame.github.io/practicas/DWEC/Tema 7. JQuery/Mastermind-JQuery/" class="barra" target="_blank">Mastermind JQuery</a>
+                        <a href="https://github.com/Miangame/miangame.github.io/tree/master/practicas/DWEC/Tema%207.%20JQuery/Mastermind-JQuery"
+                            target="_blank">Código</a>
+                    </li>
                 </ul>
             </div>
         </div>
