--- a/js.html
+++ b/js.html
@@ -79,6 +79,15 @@
                         <a href="https://github.com/Miangame/miangame.github.io/tree/master/practicas/DWEC/Tema%207.%20JQuery/Mastermind-JQuery"
                             target="_blank">Código</a>
                     </li>
+                    <li>
+                        <a href="http://blog.miguelgm.es/" class="barra" target="_blank">Sugerencias AJAX JS</a>
+                        <a href="https://github.com/Miangame/miangame.github.io/tree/master/practicas/DWEC/Tema%208.%20AJAX/ajaxJS-Sugerencias" target="_blank">Código</a>
+                    </li>
+                    <li>
+                        <a href="http://blog.miguelgm.es/" class="barra" target="_blank">Sugerencias AJAX JQuery</a>
+                        <a href="https://github.com/Miangame/miangame.github.io/tree/master/practicas/DWEC/Tema%208.%20AJAX/ajaxJquery-Sugerencias"
+                            target="_blank">Código</a>
+                    </li>
                 </ul>
             </div>
         </div>
